--- a/result.tex
+++ b/result.tex
@@ -687,7 +687,7 @@ Second, the oscillator strength of the first Mie resonance does not allow for a 
 %}}}
 \paragraph{Comparison of experimental and simulated spectra}%{{{
 The effective permeability of two samples having different average sphere sizes is represented by dots in Fig. \ref{fg_mm2012_convolution}. The FDTD simulations for an array of identical TiO$_{2}$ spheres yielded much narrower resonant spectra of $\meff(f)$, which are represented by dashed red lines. 
-To enable a direct comparison, we used the granullometric data obtained by digital processing of the microscopic images. Using the granulometric data,, the effective radius of a sphere $\rho_{\text{eff}}$ was estimated for each particle from the minor $\rho_a$ and major axes $\rho_b$: 
+To enable a direct comparison, we used the granulometric data obtained by digital processing of the microscopic images. Using the granulometric data,, the effective radius of a sphere $\rho_{\text{eff}}$ was estimated for each particle from the minor $\rho_a$ and major axes $\rho_b$: 
 \begin{equation} \rho_{\text{eff}}^{(m)} := \left[\frac{2}{3\left(\rho_a^{(m)}\right)^2} + \frac{1}{3\left(\rho_b^{(m)}\right)^2}\right]^{-0.5} \label{eq_rhoconvol}\end{equation}
             %bin_particle_size = (1./3*bin_major**-2 + 1./3*bin_minor**-2 + 1./3*bin_minor**-2)**-.5 
 This expression is based on the assumption that the ellipsoids will orient horizontally when sprinkled on the microscope slide, thus making the shortest axis vertical and hidden from the statistical processing. Obviously, it is arbitrary to assume the shortest and medium ellipsoid axis will be both equal to $\rho_b$, but this approach yielded a relatively good match with experiment. 
